--- a/trunk/rp6simul/rp6simul/TODO.txt
+++ b/trunk/rp6simul/rp6simul/TODO.txt
@@ -1,3 +1,3 @@
 - General IO: Check for overflows (reintroduce 8/16 bit separation?)
 - UART/SPI: Set ready flag when ready (instead of always enabled)
-
+- Error handling; check UNDONE's
