--- a/rp6simul/rp6simul/TODO.txt
+++ b/rp6simul/rp6simul/TODO.txt
@@ -1,3 +1,17 @@
 - General IO: Check for overflows (reintroduce 8/16 bit separation?)
 - UART/SPI: Set ready flag when ready (instead of always enabled)
 - Error handling; check UNDONE's
+- Thread safety:
+    - Lua
+    - ISRs
+    - Qt widgets
+        - Make log buffer for lua log bindings
+    - More?
+- IO register class: test all operators
+- Check delta for avrtimer when avr thread is running at 100%
+- Force terminate avr thread if necessary
+- Fix checkDelay for ioregister class
+    - only do within 'avr thread'
+    - tune/test when and how long should be nanosleep'd
+- Exit avr thread from register access
+
