--- a/trunk/rp6simul/rp6simul/TODO.txt
+++ b/trunk/rp6simul/rp6simul/TODO.txt
@@ -17,3 +17,4 @@
 - Check for initial port settings
     - Applying these outside lua?
 - Enabling / disabling drivers during runtime
+- Handle nop and sysSleep macros
