--- a/trunk/rp6simul/rp6simul/TODO.txt
+++ b/trunk/rp6simul/rp6simul/TODO.txt
@@ -22,6 +22,7 @@
     - Save/Load progress
     - Robot start
     - Map saving/loading: disable if editing is enabled?
+    - Snap to grid when resizing
 - Robot widget
 - Check version on project loading
 - Use qRound for float/double --> int conversions
