--- a/rp6simul/rp6simul/TODO.txt
+++ b/rp6simul/rp6simul/TODO.txt
@@ -28,3 +28,10 @@
 - Check version on project loading
 - Use qRound for float/double --> int conversions
 - Stacked main widget: list recent projects if none loaded?
+- IR transmitter for robot widget and property
+- check leds: colors, positions
+- patch RP6Lib
+    - C++ support
+    - no anonymous unions (gives compile errors + no duplicate variables)
+    - Check changes made on kubuntu
+    - ...
