--- a/rp6simul/rp6simul/TODO.txt
+++ b/rp6simul/rp6simul/TODO.txt
@@ -3,7 +3,7 @@
 - Error handling; check UNDONE's
 - Thread safety:
       - More?
-- IO register class: test all operators
+- IO register class: test all operators (addition, subtraction, ...)
 - Check delta for avrtimer when avr thread is running at 100%
 - Fix checkDelay for ioregister class
     - Settings
@@ -56,3 +56,4 @@
 - powerON/powerOFF currently don't affect encoders and such
 - acs: min hit distance?
 - Update default drivers
+- Destruction: instance may be zero when it shouldn't yet
