--- a/rp6simul/rp6simul/TODO.txt
+++ b/rp6simul/rp6simul/TODO.txt
@@ -58,3 +58,4 @@
 - Update default drivers
 - Destruction: instance may be zero when it shouldn't yet
 - Test/verify atomic register array
+- Auto toggle for IRCOMM sending?
