--- a/trunk/rp6simul/rp6simul/TODO.txt
+++ b/trunk/rp6simul/rp6simul/TODO.txt
@@ -68,3 +68,6 @@
     - Extend loadCustomDriverInfo()
 - power LED
 - autodetect F_CPU?
+- Robot moves too fast
+- ADC values are not rounded
+- What is EINT1 ADC value?
