--- a/trunk/rp6simul/src/TODO.txt
+++ b/trunk/rp6simul/src/TODO.txt
@@ -6,29 +6,19 @@
     - no anonymous unions (gives compile errors + no duplicate variables)
     - Check changes made on kubuntu
     - ...
-- acs: min hit distance?
 - Test/verify atomic register array
 - Test/verify reduced lua locks (if done: remove comments and commented stuff)
 - Robot speed: correct?
-- What is EINT1 ADC value?
-- Battery
-- Randomization
-    - Battery
-    - Motors
-    - Light Sensors
-    - MIC
-- More menu options (from toolbar)
 - Serial port pass through: are settings important for virtual ports? add dts/rts settings?
 - BUG: sometimes crashes on exit
 - rp6simul --> rp6sim?
 - Map templates
-- Release: add license text file for about
-- Call stopPlugin from window close
 - Store geometry?
 - Remove debug code
     - Disable qDebug()
     - Remove spinboxes+shortcuts map view
     - tracelines
+- Check MIC levels, randomize them
 
 
 LATER
@@ -40,3 +30,4 @@ LATER
 - General IO: Check for overflows (reintroduce 8/16 bit separation?)
 - Nicer project/map version checking
 - Black box: does not reflect IR
+- acs: min hit distance?
