--- a/trunk/rp6simul/src/TODO.txt
+++ b/trunk/rp6simul/src/TODO.txt
@@ -13,6 +13,7 @@
     - Disable qDebug()
     - tracelines
 - Windows: check if overwriting plugin dll works after plugin has stopped
+- Windows: sleep() disrupts
 
 
 LATER
